name:                resolveresolutions

version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:
license:             BSD3
author:              Eric Ford
maintainer:          eford@amnh.org

-- A copyright notice.
-- copyright:

category:            Biology
build-type:          Simple

cabal-version:       >= 1.22

-- flag build-cpp-files
--   description: Toggles the C++ files being successfully build.
--   default: False


executable resolveResolutions
  main-is:             Resolve.hs

  build-depends:       base               >=4.8
                     , bimap
                      -- >=0.5.8 Required for Data.Map.restrictKeys
                     , containers         >=0.5.8
                     , deepseq
                     , megaparsec         >=6.0 && <6.4
                     , mono-traversable   >=1.0
                     , pcg-file-parsers
                     , pcg-utility
                     , pretty-tree
                     , text

  default-language:    Haskell2010

  ghc-options:         -O2
                       -g
--                       -debug -optl-static
                    -- Sanity check warnings
                       -Wall
                       -Wcompat
                       -Wdodgy-foreign-imports
                       -Wduplicate-exports
                       -Wempty-enumerations
                       -Widentities
                       -Wincomplete-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-fields
                       -Wmissing-home-modules
                       -Wmissing-monadfail-instances
                       -Wmissing-monadfail-instances
                       -Wmissing-signatures
                       -Wnoncanonical-monadfail-instances
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monoid-instances
                       -Woverflowed-literals
                       -Woverlapping-patterns
                       -Wredundant-constraints
                       -Wsemigroup
                       -Wtabs
                       -Wunrecognised-warning-flags
                       -Wunrecognised-warning-flags
                       -Wunused-binds
                       -Wunused-do-bind
                       -Wunused-foralls
                       -Wunused-imports
                       -Wunused-matches
                       -Wwrong-do-bind

  hs-source-dirs:      src
