# autoconf input using ocaml.m4

AC_INIT(gz.mli)

# check for OCaml compiler
AC_PROG_OCAML
AC_PROG_FINDLIB
AC_ARG_OCAML_INSTALLDIR

AC_CACHE_SAVE

# check the C compiler
if test "$CFLAGS" = "" ; then
	CFLAGS="-O2"
fi

# System dependent options
case `./../../gnu/config.guess` in
    x86_64*)
        OCAMLFLAGS="-fno-PIC $OCAMLFLAGS" 
        ;;
    *-apple-*)
        CFLAGS="-I /usr/include/malloc $CFLAGS"
        ;;
    *-cygwin*)
        USEWIN32=true
        CFLAGS="-mwin32 -mno-cygwin $CFLAGS"
        ;;
    *)
        ;;
esac

AC_PROG_CC
AC_PROG_INSTALL

# check for zlib 
AC_CHECK_HEADER(zlib.h,,AC_MSG_ERROR(not found))

AC_CHECK_LIB(z,gzopen,,AC_MSG_ERROR(not found))
BZ_PREFIX="BZ2_"

AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(LIBS)
AC_SUBST(BZ_PREFIX)

# Finally create the Makefile from Makefile.in
AC_OUTPUT(Makefile)
